<resources>
    <string name="app_name">Indescribable Recipes</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="my_recipes">My Recipes</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="recent_recipes">Recent Recipes</string>
    <string name="your_bookmark">Your Bookmark</string>
    <string name="indescribable_recipes">Indescribable Recipes</string>
    <string name="search_for_recipes">Search for Recipes</string>
    <string name="most_popular">Most Popular</string>
    <string name="recipe_categories">Recipe Categories</string>
    <string name="filter_by">Filter by</string>
    <string name="nutriens">Nutriens</string>
    <string name="ingredients">Ingredients</string>
    <string name="all">All</string>
    <string name="notification">Notification</string>
    <string name="you_don_t_have_any_notification_at_this_time">You don\'t have any notification at this time</string>
    <string name="empty">Empty</string>
    <string name="your_recipes">Your Recipes</string>
    <string name="my_bookmark">My Bookmark</string>
    <string name="instructions">Instructions</string>
    <string name="comments">Comments</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="publish">Publish</string>
    <string name="title">Title</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="description">Description</string>
    <string name="recipe_description">Recipe Description</string>
    <string name="cook_time">Cook Time</string>
    <string name="_1_hour_30_mins_etc">1 hour, 30 mins. etc</string>
    <string name="serves">Serves</string>
    <string name="_3_people">3 people</string>
    <string name="origin">Origin</string>
    <string name="location">Location</string>
    <string name="add_ingredients">Add Ingredients</string>
    <string name="add_instructions">Add Instructions</string>
    <string name="edit">Edit</string>
    <string name="following">following</string>
    <string name="followers">followers</string>
    <string name="recipes">recipes</string>
    <string name="personal_info">Personal Info</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="country">Country</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="display_name">Display Name</string>
    <string name="username">Username</string>
    <string name="social_media">Social Media</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="wa_me_example">wa.me/example</string>
    <string name="facebook">Facebook</string>
    <string name="www_facebook_com_example">www.facebook.com/example</string>
    <string name="twitter">Twitter</string>
    <string name="www_twitter_com_example">www.twitter.com/example</string>
    <string name="other">Other</string>
    <string name="top">Top</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
</resources>