<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/discoverFragment"
        android:icon="@drawable/ic_discover"
        android:title="@string/discover" />

    <item
        android:id="@+id/addRecipesFragment"
        android:icon="@drawable/ic_add"
        tools:ignore="MenuTitle" />

    <item
        android:id="@+id/myRecipesFragment"
        android:icon="@drawable/ic_recipes"
        android:title="@string/my_recipes" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>