<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/search_background"
    android:backgroundTint="@color/white"
    android:orientation="vertical">

    <View
        android:layout_width="50dp"
        android:layout_height="6dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/search_background"
        android:backgroundTint="@color/gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/filter_by"
        android:textSize="18sp"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/fl_system_default_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textSize="18sp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_light_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nutriens"
            android:textSize="18sp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_dark_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:textSize="18sp" />

    </FrameLayout>

</LinearLayout>