<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/create"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/btn_save"
            app:layout_constraintStart_toEndOf="@id/iv_cancel"
            app:layout_constraintTop_toTopOf="@id/btn_save" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="@id/iv_cancel"
            app:layout_constraintEnd_toStartOf="@id/btn_publish"
            app:layout_constraintTop_toTopOf="@id/iv_cancel" />

        <Button
            android:id="@+id/btn_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/white"
            android:text="@string/publish"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/iv_cancel"
            app:layout_constraintEnd_toStartOf="@id/iv_more"
            app:layout_constraintTop_toTopOf="@id/iv_cancel" />


        <ImageView
            android:id="@+id/iv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_more"
            app:layout_constraintBottom_toBottomOf="@id/iv_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_cancel" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_recipes_photo"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_save"
            app:shapeAppearanceOverlay="@style/RadiusImageView"
            app:strokeWidth="1dp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_recipes_photo" />

        <EditText
            android:id="@+id/et_add_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/search_background"
            android:hint="@string/recipe_title"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/description"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/et_add_title"
            app:layout_constraintStart_toStartOf="@id/et_add_title"
            app:layout_constraintTop_toBottomOf="@id/et_add_title" />

        <EditText
            android:id="@+id/et_add_description"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/search_background"
            android:gravity="top"
            android:hint="@string/recipe_description"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="@id/tv_description"
            app:layout_constraintStart_toStartOf="@id/tv_description"
            app:layout_constraintTop_toBottomOf="@id/tv_description" />

        <TextView
            android:id="@+id/tv_cook_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cook_time"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/et_add_description"
            app:layout_constraintStart_toStartOf="@id/et_add_description"
            app:layout_constraintTop_toBottomOf="@id/et_add_description" />

        <EditText
            android:id="@+id/et_add_cook_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/search_background"
            android:gravity="top"
            android:hint="@string/_1_hour_30_mins_etc"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="@id/tv_cook_time"
            app:layout_constraintStart_toStartOf="@id/tv_cook_time"
            app:layout_constraintTop_toBottomOf="@id/tv_cook_time" />

        <TextView
            android:id="@+id/tv_serves"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/serves"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/et_add_cook_time"
            app:layout_constraintStart_toStartOf="@id/et_add_cook_time"
            app:layout_constraintTop_toBottomOf="@id/et_add_cook_time" />

        <EditText
            android:id="@+id/et_add_serves"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/search_background"
            android:gravity="top"
            android:hint="@string/_3_people"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="@id/tv_serves"
            app:layout_constraintStart_toStartOf="@id/tv_serves"
            app:layout_constraintTop_toBottomOf="@id/tv_serves" />

        <TextView
            android:id="@+id/tv_origin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/origin"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/et_add_serves"
            app:layout_constraintStart_toStartOf="@id/et_add_serves"
            app:layout_constraintTop_toBottomOf="@id/et_add_serves" />

        <EditText
            android:id="@+id/et_add_origin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/search_background"
            android:gravity="top"
            android:hint="@string/location"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="@id/tv_origin"
            app:layout_constraintStart_toStartOf="@id/tv_origin"
            app:layout_constraintTop_toBottomOf="@id/tv_origin" />

        <View
            android:id="@+id/first_view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_add_origin" />

        <TextView
            android:id="@+id/tv_ingredients"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_margin="16dp"
            android:text="@string/ingredients"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_ingredients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ingredients" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_add_ingredients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/add_ingredients"
            app:icon="@drawable/ic_add_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_ingredients" />

        <View
            android:id="@+id/second_view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fab_add_ingredients" />

        <TextView
            android:id="@+id/tv_instructions"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_margin="16dp"
            android:text="@string/instructions"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/second_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_instructions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_instructions" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_add_instructions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/add_instructions"
            app:icon="@drawable/ic_add_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_instructions" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>